--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,37 @@
+# ====================
+# CONFIGURACIÓN GENERAL
+# ====================
 PORT=3000
 DATABASE_URL=./data.db
-SENDGRID_API_KEY=
-FROM_EMAIL=no-reply@local.dev
-RETRY_INTERVALS=60,300,900
 BASE_URL=http://localhost:3000
+
+# Secret para JWT (cambiar en producción)
+JWT_SECRET=tu_secret_super_seguro_cambiame_en_produccion
+
+# ====================
+# SEGURIDAD - ENCRIPTACIÓN
+# ====================
+# Secret para encriptar API keys en la base de datos (AES-256)
+# Genera uno con: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+ENCRYPTION_SECRET=cambiame_por_un_secret_aleatorio_de_64_caracteres_hexadecimal
+
+# ====================
+# OPCIONAL: KEYS DE DEMO
+# ====================
+# Estas keys son OPCIONALES y solo se usan si un tenant no ha configurado sus propias keys.
+# Útil para testing y desarrollo. En producción, cada tenant debe configurar sus propias keys.
+# Para configurar las keys de tu empresa, ve a: Configuración → Integraciones
+
+# Stripe Demo (opcional)
+DEMO_STRIPE_SECRET_KEY=sk_test_...
+DEMO_STRIPE_PUBLISHABLE_KEY=pk_test_...
+
+# SendGrid Demo (opcional)
+DEMO_SENDGRID_API_KEY=SG....
+DEMO_FROM_EMAIL=no-reply@demo.local
+
+# ====================
+# VALORES POR DEFECTO
+# ====================
+# Intervalos de reintento por defecto (en segundos)
+RETRY_INTERVALS=60,300,900
