--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "react-router-dom": "^7.9.4",
+    "stripe": "^19.1.0",
     "uuid": "^9.0.1"
   }
 }
