--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,18 @@ BASE_URL=http://localhost:3000
 JWT_SECRET=tu_secret_super_seguro_cambiame_en_produccion
 
 # ====================
+# SISTEMA DE BILLING Y SUSCRIPCIONES
+# ====================
+# Stripe Billing para cobrar suscripciones a las empresas (NO confundir con el Stripe del usuario)
+# Estos valores son REQUERIDOS para el sistema de billing
+STRIPE_SECRET_KEY=sk_live_...
+STRIPE_BILLING_WEBHOOK_SECRET=whsec_...
+
+# Price IDs de Stripe para cada plan (crea los productos en Stripe Dashboard)
+STRIPE_PRICE_ID_PRO=price_...
+STRIPE_PRICE_ID_ENTERPRISE=price_...
+
+# ====================
 # SEGURIDAD - ENCRIPTACIÓN
 # ====================
 # Secret para encriptar API keys en la base de datos (AES-256)
