--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
+    "axios": "^1.13.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^9.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
     "react-router-dom": "^7.9.4",
     "stripe": "^19.1.0",
     "uuid": "^9.0.1"
