--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.16.3",
     "react-router-dom": "^7.9.4",
     "stripe": "^19.1.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.18.3"
   }
 }
