--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
 VITE_API_URL=https://pruebawhop-production.up.railway.app
+VITE_SENTRY_DSN=https://510e483f358575a0f56467f9fb085910@o4510290182864896.ingest.de.sentry.io/4510290200363088
