--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@sentry/react": "^10.22.0",
     "axios": "^1.13.1",
+    "node-cron": "^4.2.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
