--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@sentry/react": "^10.22.0",
     "axios": "^1.13.1",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "node-cron": "^4.2.1",
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.2.3",
     "react-router-dom": "^7.9.4",
     "react-use": "^17.6.0"
   },
