--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.13.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^9.2.2",
@@ -24,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mailersend": "^2.6.0",
     "node-cron": "^4.2.1",
     "pg": "^8.16.3",
     "react-router-dom": "^7.9.4",
