--- a/backend/package.json
+++ b/backend/package.json
@@ -23,10 +23,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mailersend": "^2.6.0",
     "node-cron": "^4.2.1",
     "pg": "^8.16.3",
     "react-router-dom": "^7.9.4",
+    "resend": "^6.4.1",
     "stripe": "^19.1.0",
     "uuid": "^9.0.1",
     "winston": "^3.18.3"
